Fixed href links in navbar items

--- a/aboutme.html
+++ b/aboutme.html
@@ -20,16 +20,16 @@
           <div class="collapse navbar-collapse" id="collapsibleNavId">
               <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
-                      <a class="nav-link" href="/index.html">Home </a>
+                      <a class="nav-link" href="/my-portfolio/index.html">Home </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/aboutme.html">About me</a>
+                      <a class="nav-link" href="/my-portfolio/aboutme.html">About me</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/contactme.html">Contact me</a>
+                    <a class="nav-link" href="/my-portfolio/contactme.html">Contact me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/gallery.html">Gallery</a>
+                    <a class="nav-link" href="/my-portfolio/gallery.html">Gallery</a>
                 </li>
               </ul>
           </div>
