--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
           <div class="collapse navbar-collapse" id="collapsibleNavId">
               <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
-                      <a class="nav-link" href="/index.html">Home </a>
+                      <a class="nav-link" href="/my-portfolio/index.html">Home </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/aboutme.html">About me</a>
+                      <a class="nav-link" href="/my-portfolio/aboutme.html">About me</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/contactme.html">Contact me</a>
+                    <a class="nav-link" href="/my-portfolio/contactme.html">Contact me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/gallery.html">Gallery</a>
+                    <a class="nav-link" href="/my-portfolio/gallery.html">Gallery</a>
                 </li>
               </ul>
           </div>
@@ -43,7 +43,7 @@
             <h3 class="mt-3">Tech Enthusiast. Traveller. Software Developer</h3>
             <p class="tag-line">To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills. Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.
             </p>
-            <a class="btn btn-light mt-5" href="/aboutme.html">Learn More</a>
+            <a class="btn btn-light mt-5" href="/my-portfolio/aboutme.html">Learn More</a>
         </div>
         <div class="my-col-lg-5 dp-img">
             <figure class="figure">
